; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_irq.c_omap_irq_set_cfg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_irq.c_omap_irq_set_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IRQ_ILR0_REG_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @omap_irq_set_cfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_irq_set_cfg(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @IRQ_BANK(i32 %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  br label %20

17:                                               ; preds = %4
  %18 = load i32, i32* %6, align 4
  %19 = and i32 %18, 1
  br label %20

20:                                               ; preds = %17, %16
  %21 = phi i32 [ 0, %16 ], [ %19, %17 ]
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = and i32 %23, 31
  %25 = shl i32 %24, 2
  %26 = or i32 %22, %25
  %27 = load i32, i32* %8, align 4
  %28 = and i32 %27, 1
  %29 = shl i32 %28, 1
  %30 = or i32 %26, %29
  %31 = sext i32 %30 to i64
  store i64 %31, i64* %10, align 8
  %32 = load i32, i32* @IRQ_ILR0_REG_OFFSET, align 4
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @IRQ_BIT(i32 %33)
  %35 = mul nsw i32 %34, 4
  %36 = add nsw i32 %32, %35
  %37 = sext i32 %36 to i64
  store i64 %37, i64* %11, align 8
  %38 = load i64, i64* %10, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load i64, i64* %11, align 8
  %41 = call i32 @irq_bank_writel(i64 %38, i32 %39, i64 %40)
  ret void
}

declare dso_local i32 @IRQ_BANK(i32) #1

declare dso_local i32 @IRQ_BIT(i32) #1

declare dso_local i32 @irq_bank_writel(i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
